--- a/physiology.html
+++ b/physiology.html
@@ -170,7 +170,7 @@ Answer: <p style="color:white"> D. During the upstroke of the action potential, 
 </form> 
 Answer: <p style="color:white"> D. Solution A is -30mV. The membrane is permeable to Ca++ but impermeable to Cl-. Although there is a concentration gradient across the membrane for both ions, only Ca++ can diffuse down this gradient. Ca++ will diffuse from solution A to solution B, leaving negative charge behind in solution A. The magnitude of this voltage can be calculated for electrochemical equilibrium with the Nernst equation as follows: E<sub>Ca++</sub> = 2.3RT/zF log C<sub>A</sub>/C<sub>B</sub> = 60mV/+2 log10 mM/1mM = 30mV log 10 = 30 mV. The sign is determined with an intuitive approach: Ca++ diffuses from solution A to solution B, so solution A develops a negative voltage (-30mV) Net diffusion of Ca++ will cease when this voltage is achieved; that is, when the chemical driving force is exactly balanced by the electrical driving force.</p><br>
 During a nerve action potential, a stimulus is delivered as indicated by the arrow shown in the following figure. In response to the stimulus, a second action potential<br>
-  <img src="PhysAP1.png"><br>
+  <img src="PhysAP1.png" width="500" height ="500"><br>
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. of smaller magnitude will occur</label><br>
@@ -185,7 +185,7 @@ During a nerve action potential, a stimulus is delivered as indicated by the arr
 </form> 
 Answer: <p style="color:white">E. Because the stimulus was delivered during the absolute refractory period, no action potential occurs. The inactivation gates of the Na+ channel were closed by depolariation and remain closed until the membrane is reolarized. As long as the inactivation gates are closed, the Na+ channels cannot be opened to allow for another action potential. </p>
   At which labeled point on the action potential is K+ closest to electrochemical equilibrium?<br>
-  <img src="PhysAP2.png"><br>
+  <img src="PhysAP2.png" width="500" height-"500"><br>
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. 1</label><br>
@@ -200,7 +200,7 @@ Answer: <p style="color:white">E. Because the stimulus was delivered during the 
 </form> 
 Answer: <p style="color:white">E. The hyperpolarizing afterpotential represents the period during which K+ permeability is highest, and the membrane potential is closest to the K+ equilibrium potential. At that point, K+ is closest to electrochemical equilibrium The force driving K+ movement out of the cell down its chemical gradient is balanced by the force driving K+ into the cell down its electrical gradient. </p>
   What process is responsible for the change in membrane potential that occurs between point 1 and point 3?<br>
-  <img src="PhysAP2.png"><br>
+  <img src="PhysAP2.png" width="500" height="500"><br>
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. Movement of Na+ into the cell</label><br>
@@ -215,7 +215,7 @@ Answer: <p style="color:white">E. The hyperpolarizing afterpotential represents 
 </form> 
 Answer: <p style="color:white">A. The upstroke of the nerve action potential is caused by opening of the Na+ channels once the membrane is depolarized to threshold. When the Na+ channels open, Na+ moves into the cell down its electrochemical gradient, driving the membrane potential toward the Na+ equilibrium potential. </p>
 What process is responsible for the change in membrane potential that occurs between point 3 and point 4? <br>
-<img src="PhysAP2.png"><br>
+<img src="PhysAP2.png" width="500" height="500"><br>
   <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. Movement of Na+ into the cell</label><br>
