--- a/physiology.html
+++ b/physiology.html
@@ -62,7 +62,21 @@ Which of the following will double the permeability of a solute in a lipid bilay
   <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
   <label for="other"> F. </label><br>
 </form> 
-Answer: <p style="color:white">B. Increasing the oil/water partition coefficient increases solubility in a lipid bilayer and therefore increases ermeability. Increasing molecular radius and membrane thickness decrease ermeability. The concentration difference of the solute has no effect on solubility. </p>
+Answer: <p style="color:white">B. Increasing the oil/water partition coefficient increases solubility in a lipid bilayer and therefore increases permeability. Increasing molecular radius and membrane thickness decrease ermeability. The concentration difference of the solute has no effect on solubility. </p>
+  Which of the following would occur as a result of the inhibition of Na+,K+-ATPase? 
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Decreased intracellular Na+ concentration</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Increased intracellular K+ concentration</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Increased intracellular Ca++ concentration</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Increased Na+-glucose cotransport</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Increased Na+-Ca++ exchange</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> C. Inhibition of Na+/K+ ATPase leads to an increase in intracellular Na+ concentration. Increased intracellular Na+ concentration decreases the Na+ gradient across the cell membrane, thereby inhibiting Na+-Ca++ exchange and causing an increase in intracellular Ca++ concentration. Increased intracellular Ca++ concentration also inhibits Na+-glucose cotransport.</p>
   <b>Osmosis</b><br>
   In a hospital error, a 60-yo-woman is infused with large volumes of a solution that causes lysis of her RBCs. The solution was most likely 
   <form>
@@ -229,6 +243,20 @@ What process is responsible for the change in membrane potential that occurs bet
   <label for="other"> F. Inhibition of the Na+-K+ pump</label><br>
 </form> 
 Answer: <p style="color:white"> D. The process responsible for repolarization is the opening of K+ channels. The K+ permeability becomes very high and drives the membrane potential toward the K+ equilibrium by flow of K+ out of the cell.</p>
+ A newly developed local anesthetic blocks Na+ channels in nerves. Which of the following effects on the action potential would it be expected to produce?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Decrease the rate of rise of the upstroke of the action potential</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Shorten the absolute refractory period</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Abolish the hyperpolariing potential</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Increase the Na+ equilibrium potential</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Decrease the Na+ equilibrium potential</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A. Blockade of the Na+ channels would prevent action potentials. The upstroke of the action potential depends on the entry of Na+ into the cell through these channels and would therefore also be reduced or abolished. The absolute refractory period would be lengthened because it is based on the availability of the Na+ channels. The hyperpolarizing afterpotential is related to increased K+ permeability. The Na+ equilibrium potential is calculated from the Nernst equation and is the theoretical potential at electrochemical equilibrium and does not depend on whether the Na+ channels are open or closed.</p>
   <b>Neuromuscular and synaptic transmission</b><br>
   The correct temporal sequence for events at the neuromuscular junction is
   <form>
@@ -244,6 +272,20 @@ Answer: <p style="color:white"> D. The process responsible for repolarization is
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> B. Acetylcholine is stored in vesicles and released when an AP in the motor nerve opens Ca++ channels in the presynaptic terminal. ACh diffuses across the synaptic cleft and opens Na+ and K+ channels in the muscle end plate, depolarizing it (but not producing an action potential). Depolarization of the muscle end plate causes local currents in adjacent muscle membrane, depolarizing the membrane to threshold and producing action potentials.</p>
+  An inhibitory postsynaptic potential <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. depolarizes the postsynaptic membrane by opening Na+ potentials</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. depolarizes the postsynaptic membrane by opening K+ channels</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. hyperpolarizes the postsynaptic membrane by opening Ca++ channels</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. hyperpolarizes the postsynaptic membrane by opening Cl- channels</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. An inhibitory postsynaptic potential hyperpolarizes the postsynaptic membrane, taking it farther from the threshold. Opening Cl- channels would hyperpolarize the postsynaptic membrane by driving the membrane potential toward Cl- equilibrium potential (-90mV). Opening Ca++ channels would depolarize postsynaptic membrane by driving it toward the Ca++ equilibrium potential.</p>
   A 42-year old man with myasthenia gravis notes increased muscle strength when he is treated with an acetylcholinesterase inhibitor. The basis for his improvement is increased
   <form>
   <input type="radio" id="A" name="1" value="A">
@@ -258,7 +300,6 @@ Answer: <p style="color:white"> B. Acetylcholine is stored in vesicles and relea
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> B. Myasthenia gravis is characterized by a decreased density of ACh receptors at the muscle end plate. An AChE inhibitor blocks degradation of ACh in the neuromuscular junction, so levels at the muscle end plate remain high, partially compensating for the deficiency of receptors.</p>
-
   <b>Skeletal Muscle</b><br>
    Repeated stimulation of a skeletal muscle fiber causes a sustained contraction (tetanus). Accumulation of which solute in intracellular fluid is responsible for the tetanus?
   <form>
@@ -280,6 +321,20 @@ Answer: <p style="color:white"> B. Myasthenia gravis is characterized by a decre
     <label for="other"> H. Adenosine triphosphate</label><br>
 </form> 
 Answer: <p style="color:white"> E. During repeated stimulation of a muscle fiber, Ca++ is released from the SR more quickly than it can be reaccumulated. The Ca++ does not return to resting levevels as it would after a single twitch. The increased Ca++ allows more cross-bridges to form, and therefore produces increased tension. Intracellular Na+ and K+ concentrations do not change during the action potential. Very few Na+ or K+ ions move into or out of the muscle cell, so bulk concentrations are unaffected. ATP levels would decrease during tetanus.</p><br>
+ In skeletal muscle, which of the following events occurs before depolarization of the T tubules in the mechanism of excitation-contraction coupling?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Depolarization of the sarcolemmal membrane</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Opening of Ca++ release channels on the sarcoplasmic reticulum</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Uptake of Ca++ into the SR by Ca++-ATPase</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Binding of Ca++ to troponin C</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Binding of actin and myosin</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A. In the mechanism of excitation-contraction coupling, excitation always precedes contraction. Excitation refers to the electrical activation of the muscle cell, which begins with an action potential (depolarization) in the sarcolemmal membrane that spreads to the T tubules. Depolarization of the T tubules then leads to the release of Ca++ from the nearby SR followed by an increase in intracellular concentration, binding of Ca++ to troponin C, and then contraction.</p>
   <b>Smooth Muscle</b><br>
   Which characteristic or component is shared by skeletal muscle and smooth muscle?
   <form>
@@ -297,6 +352,20 @@ Answer: <p style="color:white"> E. During repeated stimulation of a muscle fiber
 Answer: <p style="color:white"> C. An elevation of intracellular [Ca++] is common to the mechanism of excitation-contraction coupling in skeletal and smooth muscle. In skeletal muscle, Ca++ binds to troponin C, initiating the cross-bridge cycle. In smooth muscle, Ca++ binds to calmodulin. The Ca++-calmodulin complex activates myosin light chain kinase, which phosphorylates myosin so that shortening can occur. The striated appearance of the sarcomeres and the presence of troponin are characteristic of skeletal, not smooth, muscle. Spontaneous depolarizations and gap junctions are characteristics of unitary smooth muscle but not skeletal muscle.</p><br>
     <br>
     <b>Comparison of Skeletal Muscle, Smooth Muscle, and Cardiac Muscle</b><br>
+  At the muscle end plate, acetylcholine causes the opening of: 
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Na+ channels and depolarization toward the Na+ equilibrium potential</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. K+ channels and depolarization toward the K+ equilibrium potential</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Ca++ channels and depolarization toward the Ca++ equilibrium potential</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Na+ and K+ channels and depolarization to a value halfway between the Na+ and K+ equilibrium potentials</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Na+ and K+ channels and hyperpolarization to a value halfway between the Na+ and K+ equilibrium potentials</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. Binding of ACh to receptors in the muscle end plate opens channels that allow passage of both Na+ and K+ ions. Na+ ions will flow into the cell down its electrochemical gradient, and K+ ions will flow out of the cell down its electrochemical gradient. The resulting membrane potential that is halfway between their respective equilibrium potentials.</p>
   <h2>Neurophysiology</h2><br>
   <b>Autonomic Nervous System</b><br>
   <b>Sensory Systems</b><br>
