--- a/physiology.html
+++ b/physiology.html
@@ -335,6 +335,34 @@ Answer: <p style="color:white"> E. During repeated stimulation of a muscle fiber
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> A. In the mechanism of excitation-contraction coupling, excitation always precedes contraction. Excitation refers to the electrical activation of the muscle cell, which begins with an action potential (depolarization) in the sarcolemmal membrane that spreads to the T tubules. Depolarization of the T tubules then leads to the release of Ca++ from the nearby SR followed by an increase in intracellular concentration, binding of Ca++ to troponin C, and then contraction.</p>
+  Which of the following temporal sequences is correct for excitation-contraction coupling in skeletal muscle?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Increased intracellular [Ca++]; action potential in the muscle membrane; cross-bridge formation</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Action potential in the muscle membrane; depolarization of the T tubules; release of Ca++ from the sarcoplasmic reticulum</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Action potential in the muscle membrane; splitting of adenosine triphosphate (ATP); binding of Ca++ to troponin C</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Release of Ca++ from the SR; depolarization of the T tubules; binding of Ca++ to troponin C</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> B. The correct sequence is action potential in the muscle membrane; depolarization of the T tubules; release of Ca++ from the SR; binding of Ca++ to troponin C; cross-bridge formation; and splitting of ATP.</p><br>
+  In skeletal muscle, which of the following events occurs before depolarization of the T tubules in the mechanism of excitation-contraction coupling?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Depolarization of the sarcolemmal membrane</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Opening of Ca++ release channels on the SR</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Uptake of Ca++ into the SR by CA++-ATPase</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Binding of Ca++ to troponin C</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Binding of actin and myosin</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A. In the mechanism of excitation-contraction coupling, excitation always precedes contraction. Excitation refers to the electrical activation of the muscle cell, which begins with the AP (depolarization) in the sarcolemmal membrane that spreads to the T tubules. Depolarization of the T tubules then leads to the release of Ca++ from the nearby SR, followed by an increase in intracellular Ca++, binding of Ca++ to troponin C, and then contraction.</p>
   <b>Smooth Muscle</b><br>
   Which characteristic or component is shared by skeletal muscle and smooth muscle?
   <form>
@@ -371,6 +399,20 @@ Answer: <p style="color:white"> D. Binding of ACh to receptors in the muscle end
   <b>Sensory Systems</b><br>
   <b>Motor Systems</b><br>
   <b>Higher Functions of the Cerebral Cortex</b><br>
+  Which of the following is an inhibitory neurotransmitter in the central nervous system?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Norepinephrine</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Glutamate</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. &gamma -Aminobutyric acid</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Serotonin</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Histamine</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> C. &gamma -Aminobutyric acid (GABA) is an inhibitory neurotransmitter. Norepinephrine, glutamate, serotonin, and histamine are excitatory neurotransmitters.</p>
   <b>Blood-Brain Barrier and Cerebrospinal Fluid (CSF)</b><br>
   <b>Temperature Regulation</b><br>
   <h2>Cardiovascular Physiology</h2><br>
