--- a/physiology.html
+++ b/physiology.html
@@ -406,13 +406,13 @@ Answer: <p style="color:white"> D. Binding of ACh to receptors in the muscle end
   <input type="radio" id="B" name="1" value="B">
   <label for="female"> B. Glutamate</label><br>
   <input type="radio" id="C" name="1" value="C">
-  <label for="other"> C. &gamma -Aminobutyric acid</label><br>
+  <label for="other"> C. &gamma;-Aminobutyric acid</label><br>
   <input type="radio" id="D" name="1" value="D">
   <label for="other"> D. Serotonin</label><br> <input type="radio" id="E" name="1" value="E">
   <label for="other"> E. Histamine</label><br> <input type="radio" id="F" name="1" value="F">
   <label for="other"> F. </label><br>
 </form> 
-Answer: <p style="color:white"> C. &gamma -Aminobutyric acid (GABA) is an inhibitory neurotransmitter. Norepinephrine, glutamate, serotonin, and histamine are excitatory neurotransmitters.</p>
+Answer: <p style="color:white"> C. &gamma;-Aminobutyric acid (GABA) is an inhibitory neurotransmitter. Norepinephrine, glutamate, serotonin, and histamine are excitatory neurotransmitters.</p>
   <b>Blood-Brain Barrier and Cerebrospinal Fluid (CSF)</b><br>
   <b>Temperature Regulation</b><br>
   <h2>Cardiovascular Physiology</h2><br>
