--- a/physiology.html
+++ b/physiology.html
@@ -62,7 +62,7 @@ Which of the following will double the permeability of a solute in a lipid bilay
   <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
   <label for="other"> F. </label><br>
 </form> 
-Answer: <p style="color:white">B. Increasing the oil/water partition coefficient increases solubility in a lipid bilayer and therefore increases permeability. Increasing molecular radius and membrane thickness decrease ermeability. The concentration difference of the solute has no effect on solubility. </p>
+Answer: <p style="color:white">B. Increasing the oil/water partition coefficient increases solubility in a lipid bilayer and therefore increases permeability. Increasing molecular radius and membrane thickness decrease permeability. The concentration difference of the solute has no effect on solubility. </p>
   Which of the following would occur as a result of the inhibition of Na+,K+-ATPase? 
   <form>
   <input type="radio" id="A" name="1" value="A">
@@ -77,6 +77,34 @@ Answer: <p style="color:white">B. Increasing the oil/water partition coefficient
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> C. Inhibition of Na+/K+ ATPase leads to an increase in intracellular Na+ concentration. Increased intracellular Na+ concentration decreases the Na+ gradient across the cell membrane, thereby inhibiting Na+-Ca++ exchange and causing an increase in intracellular Ca++ concentration. Increased intracellular Ca++ concentration also inhibits Na+-glucose cotransport.</p>
+  Adenosine triphosphate is used indirectly for which of the following processes? <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Accumulation of Ca++ by the sarcoplasmic reticulum</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Transport of Na+ from intracellular to extracellular fluid</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Transport of K+ from extracellular to intracellular fluid</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Transport of H+ from parietal cells into the lumen of the stomach</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Absorption of glucose by intestinal epithelial cells</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white">All the processes listed are examples of primary active transport (and therefore use ATP directly) except for absorption of glucose by intestinal epithelial cells, which occurs by secondary active transport (i.e. cotransport). Secondary active transport uses the Na+ gradient as an energy source and therefore uses ATP indirectly to maintain the Na+ gradient.</p>
+  A new drug is developed that blocks the transporter for H+ secretion in gastric parietal cells. Which of the following transport processes is being inhibited?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Simple diffusion</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Facilitated diffusion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Primary active transport</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Cotransport</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Countertransport</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> </p>
   <b>Osmosis</b><br>
   In a hospital error, a 60-yo-woman is infused with large volumes of a solution that causes lysis of her RBCs. The solution was most likely 
   <form>
@@ -120,6 +148,20 @@ Answer: <p style="color:white">B. Flux is proportional to the concentration diff
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> D. Solution A contains both sucrose and urea at concentrations of 1mM, whereas solution B contains only sucrose at a concentration of 1mM. The calculated osmolarity of solution A is 2mOsm/L, and the calculated osmolarity of solution B is 1mOsm/L. Therefore solution A, which has a higher osmolarity, is hyperosmotic with respect to solution B, but have the same effective osmotic pressure (isotonic) because the only "effective" solute is sucrose, which has the same concentration in both solutions. Urea is not an effective solute because its reflection coefficient is zero. </p>
+  Assuming complete dissociation of all solutes, which of the following solutions would be hyperosmotic to 1mM NaCl? <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 1mM glucose</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 1.5mM glucose</label><br>
+  <input type="radio" id="C" name="1" value="C">
+    <label for="other"> C. 1mM CaCl<sub>2</sub></label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 1mM sucrose</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 1mM KCl</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Osmolarity is the concentration of articles (osmolarity = gxC) When two solutions are compared, that with the higher osmolarity is hyperosmotic. The 1mM CaCl<sub>2</sub> (osmolarity = 3mOsm/L) is hyperosmotic to 1mM NaCl (osmolarity = 2 mOsm/L). The 1mM glucose, 1.5mM glucose, and 1mM sucrose solutions are hyposmotic to 1mM NaCl, whereas 1mM KCl is isoosmotic. </p>
   <b>Diffusion Potential, Resting Membrane Potential, and Action Potential </b><br>
   Solutions A and B are separated by a semipermeable membrane that is permeable to K+ but not to Cl-. Solution A is 100mM KCl, and solution B is 1mM KCl. Which of the following statements about solution A and B are true?  
   <form>
@@ -363,6 +405,36 @@ Answer: <p style="color:white"> B. The correct sequence is action potential in t
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> A. In the mechanism of excitation-contraction coupling, excitation always precedes contraction. Excitation refers to the electrical activation of the muscle cell, which begins with the AP (depolarization) in the sarcolemmal membrane that spreads to the T tubules. Depolarization of the T tubules then leads to the release of Ca++ from the nearby SR, followed by an increase in intracellular Ca++, binding of Ca++ to troponin C, and then contraction.</p>
+Which of the following causes rigor in skeletal muscle?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Lack of action potentials in motoneurons</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. An increase in intracellular Ca++ level</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. A decrease in intracellular Ca++ level</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. An increase in ATP level</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. A decrease in ATP level </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> E. Rigor is a state of permanent contraction that occurs in skeletal muscle when ATP levels are depleted. With no ATP bound, myosin remains attached to actin and the cross-bridge cycle cannot continue. If there were no action potentials in motoneurons, the muscle fibers they innervate would not contract at all, since A are required for release of Ca++ from the SR. When intracellular [Ca++] increases, Ca++ binds troponin C, permitting the cross-bridge cycle to occur. Decreases in intracellular Ca++ cause relaxation. </p>
+  A 56 year old woman with severe muscle weakness is hospitalized. The only abnormality in her laboratory values is an elevated serum K+ concentration. The elevated serum K+ causes muscle weakness because<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. the resting membrane potential is hyperpolarized</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. the K+ equilibrium potential is hyperpolarized</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. the Na+ equilibrium potential is hyperpolarized</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. K+ are closed by depolarization</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. K+ channels are opened by depolarization</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Na+ channels are closed by depolarization</label><br>
+    <input type="radio" id="G" name="1" value ="G">
+    <label for="other"> G. Na+ channels are opened by depolarization</label><br>
+</form> 
+Answer: <p style="color:white"> F. Elevated serum K+ concentration causes depolarization of the K+ equilibrium potential and therefore depolarization of the resting membrane potential in skeletal muscle. Sustained depolarization closes the inactivation gates on the Na+ channels and prevents the occurence of action potentials in the muscle.</p>
   <b>Smooth Muscle</b><br>
   Which characteristic or component is shared by skeletal muscle and smooth muscle?
   <form>
@@ -378,6 +450,20 @@ Answer: <p style="color:white"> A. In the mechanism of excitation-contraction co
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> C. An elevation of intracellular [Ca++] is common to the mechanism of excitation-contraction coupling in skeletal and smooth muscle. In skeletal muscle, Ca++ binds to troponin C, initiating the cross-bridge cycle. In smooth muscle, Ca++ binds to calmodulin. The Ca++-calmodulin complex activates myosin light chain kinase, which phosphorylates myosin so that shortening can occur. The striated appearance of the sarcomeres and the presence of troponin are characteristic of skeletal, not smooth, muscle. Spontaneous depolarizations and gap junctions are characteristics of unitary smooth muscle but not skeletal muscle.</p><br>
+  In contraction of gastrointestinal smooth muscle, which of the following events occurs after binding of Ca+ to calmodulin?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Depolariation of the sarcolemmal membrane</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Ca++-induced Ca++ release</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Increased myosin-light-chain=kinase</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Increased intracellular Ca++ concentration</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Opening of ligand-gated Ca++ channels</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> </p>
     <br>
     <b>Comparison of Skeletal Muscle, Smooth Muscle, and Cardiac Muscle</b><br>
   At the muscle end plate, acetylcholine causes the opening of: 
@@ -412,7 +498,21 @@ Answer: <p style="color:white"> D. Binding of ACh to receptors in the muscle end
   <label for="other"> E. Histamine</label><br> <input type="radio" id="F" name="1" value="F">
   <label for="other"> F. </label><br>
 </form> 
-Answer: <p style="color:white"> C. &gamma;-Aminobutyric acid (GABA) is an inhibitory neurotransmitter. Norepinephrine, glutamate, serotonin, and histamine are excitatory neurotransmitters.</p>
+Answer: <p style="color:white"> C. &gamma;-Aminobutyric acid (GABA) is an inhibitory neurotransmitter. Norepinephrine, glutamate, serotonin, and histamine are excitatory neurotransmitters.</p><br>
+  Degeneration of dopaminergic neurons has been implicated in <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Schizophrenia</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Parkinson disease</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Myasthenia gravis</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. curare poisoning</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+  Answer: <p style="color:white"> B. Dopaminergic neurons and D<sub>2</sub> receptors are deficient in people with Parkinson's Disease. Schizophrenia involves increased levels of D<sub>2</sub> receptors. Myasthenia gravis and curare poisoning involve the neuromuscular junction, which uses ACh as a neurotransmitter.</p>
   <b>Blood-Brain Barrier and Cerebrospinal Fluid (CSF)</b><br>
   <b>Temperature Regulation</b><br>
   <h2>Cardiovascular Physiology</h2><br>
